@@ -44,7 +44,6 @@ JackServer* JackServer::fInstance = NULL;
 
 JackServer::JackServer(bool sync, bool temporary, long timeout, bool rt, long priority, long loopback, bool verbose, const char* server_name)
 {
-    JackGlobals::InitServer();
     for (int i = 0; i < CLIENT_NUM; i++)
         fSynchroTable[i] = JackGlobals::MakeSynchro();
     fGraphManager = new JackGraphManager();
@@ -76,7 +75,6 @@ JackServer::~JackServer()
         UnloadDriverModule(fDriverInfo->handle);
         free(fDriverInfo);
     }
-    JackGlobals::Destroy();
 }
 
 // TODO : better handling of intermediate failing cases...
